[workspace]
resolver = "2"
members = [
    "causeway-types",
    "causeway-cpi",
    "causeway-derive",
    "causeway-evm",
    "causeway-zec",
    "causeway-btc",
]

[workspace.package]
version = "0.1.0-alpha.0"
edition = "2021"
authors = ["Causeway contributors"]
license = "Apache-2.0"
repository = "https://github.com/causeway-sh/sdk-rs"
homepage = "https://causeway.sh"
rust-version = "1.75"

[workspace.dependencies]
borsh = "0.10"
borsh-derive = "0.10"
thiserror = "1"
hex = "0.4"
sha2 = "0.10"
sha3 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
overflow-checks = true
lto = "thin"
