[workspace]
resolver = "2"
members = [
    "causeway-types",
    "causeway-cpi",
]
# `causeway-derive` is intentionally outside the workspace: it pulls in
# k256/elliptic-curve which need zeroize >=1.5, while anchor-lang pins
# zeroize <1.4. Keeping derive standalone avoids the conflict, mirrors
# the main-repo split (`sdks/causeway-derive-rs`), and lets derive ship
# with a much smaller dep tree to crates.io. The same will apply to
# causeway-evm / causeway-zec / causeway-btc — see Day 2's day-block.
exclude = [
    "causeway-derive",
    "causeway-evm",
    "causeway-zec",
    "causeway-btc",
]

[workspace.package]
version = "0.1.0-alpha.0"
edition = "2021"
authors = ["Causeway contributors"]
license = "Apache-2.0"
repository = "https://github.com/causeway-sh/sdk-rs"
homepage = "https://causeway.sh"
rust-version = "1.75"

[workspace.dependencies]
borsh = "0.10"
borsh-derive = "0.10"
thiserror = "1"
hex = "0.4"
sha2 = "0.10"
sha3 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
overflow-checks = true
lto = "thin"
