[package]
name = "causeway-orchard"
version = "0.1.0-alpha.4"
edition = "2021"
authors = ["Causeway contributors"]
license = "Apache-2.0"
repository = "https://github.com/causeway-protocol/sdk-rs"
homepage = "https://causeway.sh"
rust-version = "1.75"
description = "Causeway off-chain helpers for Zcash Orchard shielded — bech32m payment-address parse/encode + raw 43-byte payload helpers"
readme = "README.md"
keywords = ["causeway", "zcash", "orchard", "bech32m", "shielded"]
categories = ["cryptography::cryptocurrencies"]

# Standalone — same workspace-exclusion reasoning as the other per-asset
# crates: avoids pulling shielded dependencies into the on-chain build.

[dependencies]
causeway-types = { path = "../causeway-types", version = "0.1.0-alpha.4" }
bech32 = "0.11"
thiserror = "1"
hex = "0.4"
